--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width: 100vw; margin: 0; overflow-x: hidden">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -12,7 +12,7 @@
 
 		<title>Simple Currency</title>
 	</head>
-	<body>
+	<body style="width: 100%; margin: 0">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
